# swift-clang

./: .gitignore
examples/: CMakeLists.txt
examples/AnnotateFunctions/: AnnotateFunctions.cpp
examples/FunctionLength/: CMakeLists.txt  FunctionLength.cpp
examples/FunctionLengthTool/: CMakeLists.txt
examples/Obfuscate/: CMakeLists.txt  Obfuscate.cpp  ObfuscateVisitor.cpp
examples/ObfuscatePass/: CMakeLists.txt  ObfuscatePass.cpp
examples/ObfuscateTool/: CMakeLists.txt
examples/PatchPragma/: CMakeLists.txt  PatchPragma.cpp  PatchPragmaVisitor.cpp  PatchWriter.cpp  README.txt
examples/PatchPragmaTool/: CMakeLists.txt
include/clang/Basic/: Attr.td  IdentifierTable.h  TokenKinds.def
include/clang/Obfuscate/: ObfuscateVisitor.h
include/clang/Parse/: Parser.h
include/clang/Patch/: PatchPragmaVisitor.h  PatchWriter.h
include/clang/Sema/: Sema.h
lib/Parse/: ParsePragma.cpp  ParseStmt.cpp  Parser.cpp
lib/Sema/: SemaAttr.cpp  SemaDecl.cpp  SemaDeclAttr.cpp  SemaDeclCXX.cpp  SemaDeclObjC.cpp
